# firedancer

./: .bazelignore  .bazelrc  .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  2  5b3cszafFtrgUCVf6KdJunaUVMLK986Y43WxScJnaVPb  BUILD  BUILD_TEST_BENCHMARK.md  CLAUDE.md  CODEOWNERS  CONTRIBUTE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  GNUmakefile  H7NaQbGtToMi2ZzeDc2aD1X4EdjRBSTqbtEca4x7DEtL  Introduction.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  WORKSPACE  activate  activate-clang  activate-gcc  activate-opt  bad.txt  bench_freq.py  benchmark.sh  cherry-pick-changes.patch  codereview.cfg  compile.sh  cycle.sh  deep-cycle.sh  default.nix  (+43 more)
contrib/bundle-test-server/: Cargo.toml  build.rs
contrib/bundle-test-server/protos/: bundle.proto  relayer.proto
contrib/bundle-test-server/src/: main.rs
contrib/event-test-server/: Cargo.toml  build.rs
contrib/event-test-server/src/: main.rs
contrib/ledger-gen/: Cargo.toml  run_cluster.py
contrib/ledger-gen/src/: bpf_loader.rs  instructions.rs  ledgers.rs  main.rs  nonce.rs  stake.rs  utils.rs
contrib/quic/agave_compat/: Cargo.toml  README.md  build.rs  wrapper.h
contrib/quic/agave_compat/src/: blaster.rs  main.rs
contrib/quic/quinn_compat/quinn_test/: Cargo.toml
contrib/quic/quinn_compat/quinn_test/src/: main.rs
contrib/quic/rust_compat/: Cargo.toml  build.rs  wrapper.h
contrib/quic/rust_compat/src/: main.rs  quiche.rs  quinn.rs
ffi/rust/diff-sbpf_loader/: Cargo.toml  build.rs
ffi/rust/diff-sbpf_loader/src/: lib.rs
ffi/rust/exporter/: Cargo.toml
ffi/rust/exporter/src/: main.rs  metrics.rs
ffi/rust/firedancer/: Cargo.toml
ffi/rust/firedancer-diff/: Cargo.toml
ffi/rust/firedancer-diff/fuzz/: Cargo.toml
ffi/rust/firedancer-diff/fuzz/fuzz_targets/: fuzz_sbpf_loader2_diff.rs
ffi/rust/firedancer-diff/src/: lib.rs  loader.rs
ffi/rust/firedancer-sys/: .gitignore  BUILD  Cargo.toml  build.rs  generate.sh  publish  publish.sh  stage.sh  wrapper.h  wrapper_ballet.h  wrapper_disco.h  wrapper_flamenco.h  wrapper_tango.h  wrapper_util.h
ffi/rust/firedancer-sys/src/: lib.rs
ffi/rust/firedancer-sys/src/ballet/: bmtree.rs  ed25519.rs  mod.rs  pack.rs  reedsol.rs  sbpf.rs  sha256.rs  sha512.rs  shred.rs  txn.rs
ffi/rust/firedancer-sys/src/disco/: quic.rs
ffi/rust/firedancer-sys/src/tango/: cnc.rs  dcache.rs  fctl.rs  fseq.rs  leader_schedule.rs  mcache.rs  mod.rs  mvcc.rs  quic.rs  stake.rs  tcache.rs  tempo.rs  xdp.rs
ffi/rust/firedancer-sys/src/util/: bits.rs  log.rs  mod.rs  pod.rs  rng.rs  shmem.rs  tempo.rs  tile.rs  wksp.rs
ffi/rust/firedancer-sys/tests/: links_correctly.rs
ffi/rust/firedancer/src/: bits.rs  cnc.rs  dcache.rs  fctl.rs  fseq.rs  gaddr.rs  lib.rs  log.rs  mcache.rs  pack_rx.rs  pod.rs  rng.rs  tango_tx.rs  wksp.rs  workspace.rs
ffi/rust/firedancer/tests/: lib.rs  linker.rs
labs/: Cargo.toml  README.md  sync.sh
labs/cargo/: BUILD  crates.bzl
plugin/bundle/: Cargo.toml  build.rs
plugin/bundle/protos/: auth.proto  block_engine.proto  shared.proto
plugin/bundle/src/: auth.rs  block_engine_stage.rs  lib.rs  proto.rs
plugin/bundle/test-server/: Cargo.toml  build.rs  metrics
plugin/bundle/test-server/src/: lib.rs
plugin/bundle/tests/: testnet.rs
src/app/fdctl/: .gitignore  Cargo.toml  Local.mk  Local.mk-  caps.c  caps.h  config.c  config.h  config_parse.c  config_parse.h  external_functions.c  fdctl.h  fuzz_fdctl_config.c  help.c  info.c  keygen.c  keys.c  main.c  main1.c  mem.c  monitor.c  netconf.c  ready.c  run.c  run.h  security.c  security.h  set_identity.c  spy.c  stubs_macos.c  test_config_parse.c  topo.c  topo_factor.c  topology.c  topology.h  utility.c  utility.h  version.c  version.h  version.mk  (+4 more)
src/app/fdctl/commands/: run_agave.c  run_agave.h  set_identityh.c  set_identityh.h
src/app/fdctl/config/: bench-high-limits.toml  bench-icelake-80core.toml  bench-normal-limits.toml  bench-zen3-32core.toml  bench-zen4-64core.toml  default-firedancer.toml  default.toml  development.toml  firedancer.toml  firedancer2.toml  gcp-n2-standard-16.toml  testnet-jito.toml  testnet.toml  testnet.toml.restart_240826
src/app/fdctl/configure/: configure.c  configure.h  ethtool-channels.c  ethtool-gro.c  ethtool-loopback.c  ethtool.c  frank.c  hugetlbfs.c  hyperthreads.c  large_pages.c  netns.c  shmem.c  sysctl.c  sysfs-busypoll.c  workspace.c  workspace_leftover.c  xdp.c  xdp_leftover.c
src/app/fdctl/monitor/: helper.c  helper.h  monitor.c  monitor.seccomppolicy  monitor_seccomp.h
src/app/fdctl/run/: main.seccomppolicy  pidns.arm64.seccomppolicy  pidns.seccomppolicy  run.c  run.h  run1.c  run_agave.c  run_solana.c
src/app/fdctl/run/tiles/: archiver_playback.seccomppolicy  archiver_writer.seccomppolicy  bank.c  bundle.seccomppolicy  cswtch.seccomppolicy  dedup.c  dedup.seccomppolicy  dedup_seccomp.h  event.seccomppolicy  fd_archiver.h  fd_archiver_feeder.c  fd_archiver_playback.c  fd_archiver_writer.c  fd_bank.c  fd_batch.c  fd_batch_thread.c  fd_blackhole.c  fd_bundle.c  fd_cswtch.c  fd_dedup.c  fd_eqvoc.c  fd_event.c  fd_exec.c  fd_ext_store.c  fd_gossip.c  fd_gossip_dedup.c  fd_gossip_pre_dedup.c  fd_gossip_verify.c  fd_gui.c  fd_http.c  fd_idxer.c  fd_metric.c  fd_net.c  fd_netmux.c  fd_netrx.c  fd_nettx.c  fd_pack.c  fd_pack_int.c  fd_plugin.c  fd_poh.c  (+64 more)
src/app/fdctl/run/topos/: fd_c1100.c  fd_firedancer.c  fd_frankendancer.c  fd_topos_common.c  fd_tvu.c  fd_wd_f1.c  firedancer.c  frankendancer.c  topo_util.h  topos.c  topos.h  tvu.c
src/app/fdctl/src/: config.rs  main.rs  security.rs  setns.rs  utility.rs
src/app/fdctl/src/commands/: configure.rs  mod.rs  run.rs
src/app/fdctl/src/commands/configure/: certs.rs  ethtool.rs  frank.rs  large_pages.rs  netns.rs  shmem.rs  workspace.rs  (+4 more)
src/app/fdctl/topos/: fd_firedancer.c  fd_frankendancer.c  topos.h
src/app/harness/: Cargo.toml
src/app/harness/src/: main.rs
src/app/ledger/test/sdump/: Cargo.toml  foo.py
src/app/ledger/test/testgen/: Cargo.toml
src/ballet/bls/gen_test_vectors/: Cargo.toml
src/ballet/bls/gen_test_vectors/src/: main.rs
(+6922 files in other folders)
