[package]
name = "bundle-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.14", features = ["tls-webpki-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
log = "0.4.22"
tokio = "1.47"
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
thiserror = "1.0"
bs58 = "0.5.1"
futures-util = "0.3"
env_logger = "0.11"
base64 = "0.22"
rustyline = "17.0"

[build-dependencies]
tonic-prost-build = "0.14"
protobuf-src = "2.1"
prost-types = "0.14"

[dev-dependencies]
ed25519-dalek = "2.1.1"

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
