[package]
name = "event-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
hex = "0.4"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
