[package]
name = "event-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
tonic = { version = "0.14", features = ["tls-ring"] }
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1.0", features = ["macros", "net", "rt", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-stream = "0.1"
hex = "0.4"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
