[package]
name = "ledger-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs-next = "2.0"
lazy_static = "1.4"
solana-sdk = { version = "1.18.16", features = ["dev-context-only-utils"] }
solana-bpf-loader-program ={ version = "1.18.16"}
solana-program-runtime ={ version = "1.18.16"}
solana_rbpf = { version = "0.8.0"}
solana-client = { version = "1.18.16"}
solana-cli ={ version = "1.18.16"}
solana-rpc-client-api = { version = "1.18.16"}
solana-rpc-client-nonce-utils = { version = "1.18.16"}
