[package]
name = "ledger-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs-next = "2.0"
lazy_static = "1.4"
solana-sdk = { version = "2.0.3", features = ["dev-context-only-utils"] }
solana-bpf-loader-program ={ version = "2.0.3"}
solana-program-runtime ={ version = "2.0.3"}
solana_rbpf = { version = "0.8.1"}
solana-client = { version = "2.0.3"}
solana-cli ={ version = "2.0.3"}
solana-rpc-client-api = { version = "2.0.3"}
solana-rpc-client-nonce-utils = { version = "2.0.3"}
solana-compute-budget  = { version = "2.0.3"}
