[package]
name = "firedancer-plugin-bundle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
tonic = { version = "0.12.2", features = ["tls-roots", "tls", "tls-webpki-roots"] }
prost = "0.13.3"
prost-types = "0.13.3"
log = "0.4.22"
tokio = "1.40.0"
tokio-stream = "0.1"
futures = "0.3.30"
chrono = "0.4.38"
thiserror = "1.0.64"
bs58 = "0.5.1"

[build-dependencies]
tonic-build = "0.12.2"
protobuf-src = "2.1.0"
prost-types = "0.13.3"

[dev-dependencies]
env_logger = "0.11.5"
ed25519-dalek = "2.1.1"

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
