[package]
name = "firedancer-agave-quic-test"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
bindgen = "0.69"

[dependencies]
crossbeam-channel = "0.5"
env_logger = "0.11"
libc = "0.2"
rand = "0.8.5"
solana-connection-cache = "2.0.13"
solana-client = "2.0.13"
solana-sdk = "2.0.13"
solana-streamer = "2.0.13"
solana-quic-client = "2.0.13"
