[package]
name = "firedancer-rust-quic-test"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
bindgen = "0.71"

[dependencies]
env_logger = "0"
libc = "0.2"
quiche = { version = "0.24.5", features = ["qlog"] }
quinn = { version = "0.11", features = ["rustls-aws-lc-rs", "rustls-ring"] }
rustls = { version = "0.23", features = ["aws_lc_rs", "ring"] }
rustls-post-quantum = "0.2.1"
tokio = { version = "1.42", features = ["net", "rt"] }
