[package]
name = "firedancer-sys"
version = "0.1.0"
edition = "2021"
authors = ["Firedancer Contributors <firedancer-devs@jumptrading.com>"]
description = "Low-level Rust bindings for Firedancer"
license = "Apache-2.0"

include = [
    "src",
]

[features]
default = []
fuzz-asan = []

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
