[package]
name = "firedancer"
version = "0.1.0"
edition = "2021"
authors = ["Firedancer Contributors <firedancer-devs@jumptrading.com>"]
description = "Safe user-facing wrappers for interacting with Firedancer components"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.23", default-features = false }
crossbeam-channel = "0.5.6"
firedancer-sys = { path = "../firedancer-sys", version = "=0.1.0" }
libc = "0.2.131"
rand = "0.7.0"
tokio = { version = "~1.14.1", features = ["full"] }
