[package]
name = "bundle-test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bundlesvr"

[dependencies]
tonic = { version = "0.12.2", features = ["tls-roots", "tls", "tls-webpki-roots"] }
prost = "0.13.3"
prost-types = "0.13.3"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3.30"
chrono = "0.4.38"
thiserror = "1.0.64"
bs58 = "0.5.1"
futures-util = "0.3.31"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = "0.12.2"
protobuf-src = "2.1.0"
prost-types = "0.13.3"

[dev-dependencies]
ed25519-dalek = "2.1.1"

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
