[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
# solana-validator = { path = "../../solana/validator" }
