[package]
name = "sdump"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
solana-runtime = { path = "/home/jsiegel/repos/solana/runtime" }
solana-ledger = { path = "/home/jsiegel/repos/solana/ledger" }
solana-sdk = { path = "/home/jsiegel/repos/solana/sdk" }

