[package]
name = "foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bv = { path = "/home/jsiegel/repos/bv-rs", features = ["serde"] }
hex = "0.3.2"
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.91"
solana-runtime = { path = "/home/jsiegel/repos/solana/runtime" }
solana-sdk = { path = "/home/jsiegel/repos/solana/sdk" }

